--- a/.github/workflows/checkmarx-analysis.yml
+++ b/.github/workflows/checkmarx-analysis.yml
@@ -25,16 +25,19 @@ jobs:
     - name: Checkmarx CxFlow Action
       uses: checkmarx-ts/checkmarx-cxflow-github-action@v1.0-9.x
       with:
-        project: GithubActionTest
+        project: ${{ github.repository }}
         team: '/CxServer/SP/Company/Users'
         checkmarx_url: ${{ secrets.CHECKMARX_URL }}
         checkmarx_username: ${{ secrets.CHECKMARX_USERNAME }}
         checkmarx_password: ${{ secrets.CHECKMARX_PASSWORD }}
         checkmarx_client_secret: ${{ secrets.CHECKMARX_CLIENT_SECRET }}
         # edit - set to full to support small demos .
-        params: --checkmarx.incremental=false
-    # Upload the Report for CodeQL/Security Alerts
-    - name: Upload SARIF file
-      uses: github/codeql-action/upload-sarif@v1
-      with:
-        sarif_file: cx.sarif
+        github_token: ${{secrets.GH_TOKEN}}
+        preset: "XSS and SQLi only"
+        incremental: false
+        params: --checkmarx.incremental=false --namespace=${{ github.repository_owner }} --repo-name=${{ github.event.repository.name }}  --branch=${{ github.ref }} --cxflow.bug-tracker=GitHub
+        # Upload the Report for CodeQL/Security Alerts
+#    - name: Upload SARIF file
+#     uses: github/codeql-action/upload-sarif@v1
+#     with:
+#       sarif_file: cx.sarif
