--- a/.github/workflows/checkmarx-analysis.yml
+++ b/.github/workflows/checkmarx-analysis.yml
@@ -35,8 +35,8 @@ jobs:
         sca_app_url: https://sca.scacheckmarx.com
         sca_access_control_url: https://platform.checkmarx.net
         sca_tenant: SCA-CHampions  # <-- Insert Checkmarx CxSCA Tenant
-        sca_username: ${{ secrets.CHECKMARX_SCA_USERNAME }} # To be stored in GitHub Secrets.
-        sca_password: ${{ secrets.CHECKMARX_SCA_PASSWORD }} # To be stored in GitHub Secrets.
+        sca_username: ${{ secrets.SCA_USERNAME }} 
+        sca_password: ${{ secrets.SCA_PASSWORD }} 
         break_build: false
         scanners: sca,sast
         # edit - set to full to support small demos .
